# async-google-apis

./: .gitignore  .hgignore  .hgtags  Cargo.toml  LICENSE  README.md
async-google-apis-common/: Cargo.toml  README.md
async-google-apis-common/src/: error.rs  http.rs  lib.rs  multipart.rs
drive_example/: Cargo.toml  README.md
drive_example/src/: drive_v3_types.rs  main.rs
example/drive/: README.md
example/gcs/: README.md
example/gcs/src/: main.rs
example/gcs_example/: README.md
example/youtube/: Cargo.toml  README.md
example/youtube_example/src/: main.rs
example_crates/calendar_example/: Cargo.toml
example_crates/calendar_example/src/: calendar_v3_types.rs  main.rs
example_crates/drive_example/: Cargo.toml  README.md  media_download.patch
example_crates/drive_example/src/: drive_v3_types.rs  main.rs  media_download.patch
example_crates/gcs_example/: Cargo.toml  README.md  media_download.patch
example_crates/gcs_example/src/: main.rs  media_download.patch  storage_v1_types.rs
example_crates/youtube_example/: Cargo.toml  README.md
example_crates/youtube_example/src/: main.rs  youtube_v3_types.rs
gcs_example/: Cargo.toml  README.md
gcs_example/src/: main.rs  storage_v1_types.rs
generate/: Pipfile  README.md  drivev3.json  generate.py  templates.py  tmp.py
generate-rs/: Cargo.toml
generate-rs/src/: main.rs  parser.rs  templates.rs
generate_rs/: Cargo.toml
generate_rs/src/: discovery_v1_types.rs  main.rs
manual_demo/: Cargo.toml  client_secret.json  tokencache.json
manual_demo/src/: main.rs
res/: README.md
res/manual_demo/: Cargo.toml  README.md
res/manual_demo/src/: drive_v3_types.rs  main.rs  photoslibrary_v1_types.rs
res/test_integration/src/: lib.rs
src/: lib.rs
test_integration/: Cargo.toml  client_secret.json
test_integration/src/: integration_test_v1_types.rs  lib.rs
