[package]
name = "async-google-apis-common"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"
keywords = ["rest", "google", "async", "api"]
description = "Shared code for the async-google-apis generated code."
homepage = "https://github.com/dermesser/async-google-apis"
repository = "https://github.com/dermesser/async-google-apis"
license = "MIT"
documentation = "https://docs.rs/async-google-apis-common"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
futures-core = "~0.3"
futures-util = "~0.3"
hyper = "~0.13"
hyper-rustls = "~0.20"
percent-encoding = "~2.1"
radix64 = "~0.6"
serde = "~1.0"
serde_json = "~1.0"
tokio = { version = "~0.2", features = ["stream", "fs"] }
yup-oauth2 = "~4"
