[package]
name = "drive_example"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
hyper = "~0.13"
hyper-rustls = "~0.20"
percent-encoding = "~2.1"
serde = "~1.0"
serde_json = "~1.0"
tokio = { version = "~0.2", features = ["full"] }
yup-oauth2 = "~4"
