[package]
name = "drive_example"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = { path = "../async-google-apis-common/" }

serde = "~1.0"
anyhow = "~1.0"
hyper = "~0.13"
hyper-rustls = "~0.20"
tokio = { version = "~0.2", features = ["full"] }
yup-oauth2 = "~4"
