[package]
name = "generate_rs"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = { path = "../async-google-apis-common" }
serde = "~1.0"
serde_json = "~1.0"
reqwest = "~0.10"
tokio = { version = "~0.2" }
clap = "~2.33"
anyhow = "~1.0"
