[package]
name = "manual_demo"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yup-oauth2 = "~4"
serde_json = "~1.0"
serde = "~1.0"
tokio = { version = "~0.2", features = ["full"] }
hyper = "~0.13"
hyper-rustls = "~0.20"

