[package]
name = "test_integration"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = "~0.1"

anyhow = "~1.0"
serde = "~1.0"
env_logger = "~0.8"
hyper = "~0.13"
hyper-rustls = "~0.20"
mockito = "~0.27"
tokio = { version = "~0.2", features = ["full"] }
