[package]
name = "drive_example"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = { path = "../../async-google-apis-common/" }

anyhow = "~1.0"
serde = "~1.0"
env_logger = "~0.8"
hyper-rustls = { version = "~0.22", features = ["rustls-native-certs"] }
hyper = { version = "~0.14", features = ["stream"] }
tokio = { version = "~1.0", features = ["macros", "io-util", "rt", "rt-multi-thread", "fs"] }
