[package]
name = "gcs_example"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = { path = "../../async-google-apis-common" }

anyhow = "~1.0"
chrono = "~0.4"
clap = "~2.33"
serde = "~1.0"
env_logger = "~0.8"
hyper-rustls = "~0.20"
hyper = "~0.13"
tokio = { version = "~0.2", features = ["rt-core", "io-util", "macros", "fs"] }
