[package]
name = "manual_demo"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = { path = "../../async-google-apis-common/" }

chrono = { version = "~0.4", default-features = false, features = ["clock", "std", "serde"] }
hyper = "~0.14"
hyper-rustls = { version = "~0.23", features = ["http2", "rustls-native-certs"] }
serde = "~1.0"
serde_json = "~1.0"
tokio = { version = "~1.25", features = ["full"] }
yup-oauth2 = "~6.5"
anyhow = "~1.0"
base64 = "~0.13"
